Add Project pose augmentation

--- a/src/openMVG_IMU/sfm/CMakeLists.txt
+++ b/src/openMVG_IMU/sfm/CMakeLists.txt
@@ -16,6 +16,7 @@ target_compile_features(openMVG_IMU_sfm INTERFACE ${CXX11_FEATURES})
 target_link_libraries(openMVG_IMU_sfm
   PUBLIC
     openMVG_sfm
+	openMVG_IMU_multiview
     openMVG_geometry
     openMVG_features
     openMVG_graph
