add Project main_ComputeMatches_optical_filtering/matching and modify the code in sequential_SfM for debugging

--- a/src/openMVG_IMU/CMakeLists.txt
+++ b/src/openMVG_IMU/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_subdirectory(sfm)
 add_subdirectory(multiview)
 add_subdirectory(matching_image_collection)
-
+add_subdirectory(matching)
+add_subdirectory(utils)
 #INSTALL RULES
 install(
   DIRECTORY .
