add Project OpenMVG_IMU_main_IncrementalSfM_robust_initialization(multimodel and imu validation)

--- a/src/openMVG_IMU/multiview/CMakeLists.txt
+++ b/src/openMVG_IMU/multiview/CMakeLists.txt
@@ -24,6 +24,8 @@ target_link_libraries(openMVG_IMU_multiview
   PUBLIC
     openMVG_multiview
     openMVG_numeric
+    openMVG_camera
+    openMVG_geometry
   PRIVATE
     openMVG_graph
     ${CERES_LIBRARIES}
