--- a/src/software/SfM/CMakeLists.txt
+++ b/src/software/SfM/CMakeLists.txt
@@ -293,3 +293,4 @@ add_subdirectory(clustering)
 add_subdirectory(export)
 add_subdirectory(import)
 add_subdirectory(addIMU)
+add_subdirectory(generator)
