--- a/src/software/SfM/VISfM/CMakeLists.txt
+++ b/src/software/SfM/VISfM/CMakeLists.txt
@@ -12,12 +12,24 @@ target_link_libraries(openMVG_main_VISfM
         ${STLPLUS_LIBRARY}
         )
 target_include_directories(openMVG_main_VISfM PRIVATE ${CERES_INCLUDE_DIRS})
+set_property(TARGET openMVG_main_VISfM PROPERTY FOLDER OpenMVG/software/VISfM)
+install(TARGETS openMVG_main_VISfM DESTINATION bin/)
 
 add_executable(openMVG_main_save_pose_point save_pose_point.cpp)
-#        VISfM_src/sequential_VISfM.cpp VISfM_src/sequential_VISfM.hpp VISfM_src/visfm_data_BA_ceres.cpp VISfM_src/visfm_data_BA_ceres.hpp VISfM_src/VISfM_ceres_facotr.cpp VISfM_src/VISfM_ceres_facotr.hpp VISfM_src/VISfM_ceres_param.cpp VISfM_src/VISfM_ceres_param.hpp VISfM_src/Utility.hpp VISfM_src/VI_static_Parm.hpp VISfM_src/IMU_InteBase.hpp VISfM_src/VI_static_Parm.cpp)
 target_link_libraries(openMVG_main_save_pose_point
         PRIVATE
-        openMVG_vi_sfm
+        openMVG_system
+        openMVG_image
+        openMVG_features
+        openMVG_sfm
+        ${STLPLUS_LIBRARY}
+        )
+set_property(TARGET openMVG_main_save_pose_point PROPERTY FOLDER OpenMVG/software/VISfM)
+install(TARGETS openMVG_main_save_pose_point DESTINATION bin/)
+
+add_executable(openMVG_main_save_tum save_tum.cpp)
+target_link_libraries(openMVG_main_save_tum
+        PRIVATE
         openMVG_system
         openMVG_image
         openMVG_features
@@ -25,5 +37,7 @@ target_link_libraries(openMVG_main_save_pose_point
         ${STLPLUS_LIBRARY}
         )
 
-set_property(TARGET openMVG_main_VISfM PROPERTY FOLDER OpenMVG/software/VISfM)
-install(TARGETS openMVG_main_VISfM DESTINATION bin/)
+add_executable(change_time_xinli change_time_xinli.cpp)
+
+set_property(TARGET openMVG_main_save_tum PROPERTY FOLDER OpenMVG/software/VISfM)
+install(TARGETS openMVG_main_save_tum DESTINATION bin/)
