--- a/src/software/SfM/CMakeLists.txt
+++ b/src/software/SfM/CMakeLists.txt
@@ -308,3 +308,4 @@ add_subdirectory(export)
 add_subdirectory(import)
 add_subdirectory(addIMU)
 add_subdirectory(VISfM)
+add_subdirectory(SimulationData_Gen)
