many thing need to check

--- a/src/software/SfM/SimulationData_Gen/CMakeLists.txt
+++ b/src/software/SfM/SimulationData_Gen/CMakeLists.txt
@@ -10,3 +10,5 @@ target_link_libraries(openMVG_main_simu_gen
 
 set_property(TARGET openMVG_main_simu_gen PROPERTY FOLDER OpenMVG/software)
 install(TARGETS openMVG_main_simu_gen DESTINATION bin/)
+
+add_executable(main_simu_gen_time main_simu_gen_time.cpp)
