--- a/src/software/SfM/addIMU/imu_integrator/CMakeLists.txt
+++ b/src/software/SfM/addIMU/imu_integrator/CMakeLists.txt
@@ -4,7 +4,8 @@
 #find_package(Eigen3 REQUIRED)
 
 include_directories(
-    ${EIGEN3_INCLUDE_DIRS}
+    ${EIGEN_INCLUDE_DIRS}
+    #${EIGEN3_INCLUDE_DIRS}
 #    ${PROJECT_SOURCE_DIR}
 )
 
