--- a/src/software/SfM/CMakeLists.txt
+++ b/src/software/SfM/CMakeLists.txt
@@ -295,3 +295,4 @@ add_subdirectory(import)
 add_subdirectory(addIMU)
 add_subdirectory(generator)
 add_subdirectory(Window_SfM)
+add_subdirectory(VISfM)
