--- a/src/software/SfM/Window_SfM/CMakeLists.txt
+++ b/src/software/SfM/Window_SfM/CMakeLists.txt
@@ -1,5 +1,8 @@
 
-add_executable(openMVG_main_IncrementalSfM_window main_IncrementalSfM_window.cpp)
+add_executable(openMVG_main_IncrementalSfM_window
+        main_IncrementalSfM_window.cpp
+        window_sequential_SfM.cpp
+        )
 target_link_libraries(openMVG_main_IncrementalSfM_window
         PRIVATE
         openMVG_system
@@ -8,7 +11,6 @@ target_link_libraries(openMVG_main_IncrementalSfM_window
         openMVG_sfm
         ${STLPLUS_LIBRARY}
         )
-
 
 target_include_directories(openMVG_main_IncrementalSfM_window PRIVATE ${CERES_INCLUDE_DIRS})
 set_property(TARGET openMVG_main_IncrementalSfM_window PROPERTY FOLDER OpenMVG/software/Window_SfM)
