--- a/src/software/SfM/CMakeLists.txt
+++ b/src/software/SfM/CMakeLists.txt
@@ -13,6 +13,17 @@ target_link_libraries(openMVG_main_SfMInit_ImageListing
     ${STLPLUS_LIBRARY}
 )
 
+add_executable(openMVG_main_SfMInit_ImageListing_EuRoc main_SfMInit_ImageListing_EuRoc.cpp)
+target_link_libraries(openMVG_main_SfMInit_ImageListing_EuRoc
+        PRIVATE
+        openMVG_system
+        openMVG_image
+        openMVG_features
+        openMVG_sfm
+        openMVG_exif
+        ${STLPLUS_LIBRARY}
+        )
+
 #convert a v0.6 lists.txt file to the new sfm_data.X format
 add_executable(openMVG_main_ConvertList main_ConvertList.cpp)
 target_link_libraries(openMVG_main_ConvertList
@@ -26,6 +37,8 @@ target_link_libraries(openMVG_main_ConvertList
 # Installation rules
 set_property(TARGET openMVG_main_SfMInit_ImageListing PROPERTY FOLDER OpenMVG/software)
 install(TARGETS openMVG_main_SfMInit_ImageListing DESTINATION bin/)
+set_property(TARGET openMVG_main_SfMInit_ImageListing_EuRoc PROPERTY FOLDER OpenMVG/software)
+install(TARGETS openMVG_main_SfMInit_ImageListing_EuRoc DESTINATION bin/)
 set_property(TARGET openMVG_main_ConvertList PROPERTY FOLDER OpenMVG/software)
 install(TARGETS openMVG_main_ConvertList DESTINATION bin/)
 
