--- a/src/software/SfM/CMakeLists.txt
+++ b/src/software/SfM/CMakeLists.txt
@@ -309,3 +309,4 @@ add_subdirectory(addIMU)
 add_subdirectory(generator)
 add_subdirectory(Window_SfM)
 add_subdirectory(VISfM)
+add_subdirectory(LoopFusion)
